<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"
    card_view:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="5dp">
        <ImageView
            android:id="@+id/img_item_wisata"
            android:layout_width="160dp"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/gambar_wisata"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent" />
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@+id/img_item_wisata"
            android:layout_toRightOf="@+id/img_item_wisata"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            tools:text="@string/nama_wisata"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/tv_item_name"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/img_item_wisata"
            android:layout_toRightOf="@+id/img_item_wisata"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="4"
            tools:text="@string/detail"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>